--- a/vignettes/success_rate_curve.Rmd
+++ b/vignettes/success_rate_curve.Rmd
@@ -34,29 +34,53 @@ We define 5 goals of a measure of model performance:
 
 When assessing models, it is very important to carefully track what data is being used for what type of assessment; thiswill determine the limits on interpretation of any measure. 
 
-Typically, a data set is divided into training and testing datasets (often multiple times, in a cross-validation scheme). Data that the model has *never* seen during the training process can be used to assess predictive performance of a model. For spatiotemporal datasets (as is the case with landslide susceptibility modeling), this split is usually along some spatial or temporal division. Since the model is guaranteed to be applied to data that is outside the temporal scope of the training data, it is often a good idea to look at temporal splits. 
+Typically, a data set is divided into training and testing data sets (often multiple times, in a cross-validation scheme). Data that the model has *never* seen during the training process can be used to assess predictive performance of a model. For spatiotemporal data sets (as is the case with landslide susceptibility modeling), this split is usually along some spatial or temporal division. Since the model is guaranteed to be applied to data that is outside the temporal scope of the training data, it is often a good idea to look at temporal splits. 
+
+For now, we are using a model that has been trained on all available landslide points, so we do not have any testing data set. We do use a training data set of landslide points to calculate a success rate curve. 
+
+```{r}
+
+land_pred <- as_tibble(as.data.table(ls_model$predict_newdata(train_data)))
+```
+
 
 ## The Success Rate Curve
 
 > The “success-rate” curve was introduced by Chung and Fabbri (n.d.). To construct a success-rate curve, we rank DEM cells by the modeled probability that they contain a landslide initiation point. We then plot the proportion of mapped landslides versus the proportion of area, ranked by modeled probability.
 
-We show how to generate the success rate curve using the function included in the package. 
-Show what the output looks like. 
-Show a graph of the success rate curve. 
+To generate the success rate curve, we need a list of data frames that contain the modeled probabilities for each DEM that we want to consider in our assessment. 
+
+The size of the study area, or which DEMs to include, should be carefully considered. as it will For instance, imagine if you included a completely flat portion of the study area, that had an appropriately low probability of landslide initiation. 
+
+For this example, we pull from a small directory of DEMs. This should not be considered a 
 
 ```{r}
 
-output_dir <- "/Users/julialober/Documents/terrainworks/code/sandbox/data/pred_output/"
+pred_dir <- "/Users/julialober/Documents/terrainworks/code/sandbox/data/pred_output/"
 
-dems <- list.files(output_dir, full.names = TRUE,  recursive = TRUE)
-print(dems)
+dems <- list.files(pred_dir, full.names = TRUE,  recursive = TRUE)
+dems
 
 ```
 
+Each csv file should have one row per cell of the DEM, with (x, y) columns, a prob.pos column, and all columns that are needed for inputting into the model. An example of one of these data frames is shown below. 
+
+Files like this can be created using functions included in this package, see \code{vignette(predicting_new_data)}. 
+
+```{r}
+as_tibble(read.csv(dems[1]))
+```
+
+Now, we give the \code{srcurve} function a data frame of the landslide predicted 
+
+The time-consuming part of this process is reading the .csv files. A planned expansion of this project is to allow a list of data frames in lieu of a list of files names, to accommodate different workflows and potential streamlining. 
+
 ```{r}
 
+# dem_tibbles <- lapply(lapply(dems, read.csv), tibble)
+
 s <- srcurve2(land_pred, 
-         dem_list  = dems)
+         dem_list  = dem_tibbles)
 
 ```
 
