PFA_initiation_DOGAMI.qmd update

--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1567,3 +1567,83 @@
 	url = {http://dx.doi.org/10.1016/S0169-555X(02)00355-0},
 	langid = {en}
 }
+
+@article{smith2018,
+	title = {Step away from stepwise},
+	author = {Smith, Gary},
+	year = {2018},
+	month = {09},
+	date = {2018-09-15},
+	journal = {Journal of Big Data},
+	volume = {5},
+	number = {1},
+	doi = {10.1186/s40537-018-0143-6},
+	url = {http://dx.doi.org/10.1186/s40537-018-0143-6},
+	langid = {en}
+}
+
+@article{chan2022,
+	title = {Mitigating the Multicollinearity Problem and Its Machine Learning Approach: A Review},
+	author = {Chan, Jireh Yi-Le and Leow, Steven Mun Hong and Bea, Khean Thye and Cheng, Wai Khuen and Phoong, Seuk Wai and Hong, Zeng-Wei and Chen, Yen-Lin},
+	year = {2022},
+	month = {04},
+	date = {2022-04-12},
+	journal = {Mathematics},
+	pages = {1283},
+	volume = {10},
+	number = {8},
+	doi = {10.3390/math10081283},
+	url = {http://dx.doi.org/10.3390/math10081283},
+	langid = {en}
+}
+
+@book{molnar2023,
+    author = {Molnar, Christoph},
+	title = {Interpretable Machine Learning, A Guide for Making Black Box Models Explainable},
+	year = {2023},
+	url = {https://christophm.github.io/interpretable-ml-book/}
+}
+@article{wolfe1986,
+	title = {Rates of Landsliding as Impacted by Timber Management Activities in Northwestern California},
+	author = {WOLFE, M. D. and WILLIAMS, J. W.},
+	year = {1986},
+	month = {02},
+	date = {1986-02-01},
+	journal = {Environmental & Engineering Geoscience},
+	pages = {53--60},
+	volume = {xxiii},
+	number = {1},
+	doi = {10.2113/gseegeosci.xxiii.1.53},
+	url = {http://dx.doi.org/10.2113/gseegeosci.xxiii.1.53},
+	langid = {en}
+}
+
+@article{woodward2023,
+	title = {Shallow Landslide Erosion Rates on Industrially Managed Timberlands: Key Factors Affecting Historical and Contemporary Rates},
+	author = {Woodward, Jason S.},
+	year = {2023},
+	month = {02},
+	date = {2023-02-10},
+	journal = {Environmental & Engineering Geoscience},
+	pages = {115--131},
+	volume = {29},
+	number = {2},
+	doi = {10.2113/eeg-d-22-00005},
+	url = {http://dx.doi.org/10.2113/EEG-D-22-00005},
+	langid = {en}
+}
+
+@article{newman2022,
+	title = {Evaluating Scaling Frameworks for Multiscale Geomorphometric Analysis},
+	author = {Newman, Daniel R. and Cockburn, Jaclyn M. H. and {Drǎgu{\c{t}}}, Lucian and Lindsay, John B.},
+	year = {2022},
+	month = {01},
+	date = {2022-01-02},
+	journal = {Geomatics},
+	pages = {36--51},
+	volume = {2},
+	number = {1},
+	doi = {10.3390/geomatics2010003},
+	url = {http://dx.doi.org/10.3390/geomatics2010003},
+	langid = {en}
+}
