--- a/vignettes/success_rate_curve.Rmd
+++ b/vignettes/success_rate_curve.Rmd
@@ -36,7 +36,9 @@ When assessing models, it is very important to carefully track what data is bein
 
 Typically, a data set is divided into training and testing data sets (often multiple times, in a cross-validation scheme). Data that the model has *never* seen during the training process can be used to assess predictive performance of a model. For spatiotemporal data sets (as is the case with landslide susceptibility modeling), this split is usually along some spatial or temporal division. Since the model is guaranteed to be applied to data that is outside the temporal scope of the training data, it is often a good idea to look at temporal splits. 
 
-For now, we are using a model that has been trained on all available landslide points, so we do not have any testing data set. We do use a training data set of landslide points to calculate a success rate curve. 
+For now, we are using a model that has been trained on all available landslide points, so we do not have any testing data set. 
+
+In the case of the success rate curve, the literature differentiates curves generating using training data and testing data. When using testing data, the curve is called a prediction rate curve. 
 
 ```{r}
 
@@ -56,7 +58,7 @@ For this example, we pull from a small directory of DEMs. This should not be con
 
 ```{r}
 
-pred_dir <- "/Users/julialober/Documents/terrainworks/code/sandbox/data/pred_output/"
+pred_dir <- "/Users/julialober/Documents/terrainworks/code/sandbox/data/pred_output_rast/"
 
 dems <- list.files(pred_dir, full.names = TRUE,  recursive = TRUE)
 dems
@@ -68,21 +70,70 @@ Each csv file should have one row per cell of the DEM, with (x, y) columns, a pr
 Files like this can be created using functions included in this package, see \code{vignette(predicting_new_data)}. 
 
 ```{r}
-as_tibble(read.csv(dems[1]))
+tic()
+as_tibble(fread(dems[1]))
+toc()
 ```
 
 Now, we give the \code{srcurve} function a data frame of the landslide predicted 
+
+
+Testing improvements with parallelization: using parallel
+```{r}
+test <- dems[21:40]
+
+tic()
+dem_tibbles <- lapply(test, fread)
+toc()
+
+# tic()
+# dem_tibbles <- mclapply(test, read.csv, mc.cores = parallel::detectCores() / 2)
+# toc()
+
+# tic()
+# cl <- makeCluster(detectCores() / 2)
+# dem_tibbles <- parLapply(cl, test, fread)
+# stopCluster(cl)
+# toc()
+
+
+# tic()
+# registerDoMC(cores = 4)
+# dem_tibbles <- foreach(dem = dems) %dopar% {
+#   read.csv(dem)
+# }
+# toc()
+
+
+```
+
 
 The time-consuming part of this process is reading the .csv files. A planned expansion of this project is to allow a list of data frames in lieu of a list of files names, to accommodate different workflows and potential streamlining. 
 
 ```{r}
 
-# dem_tibbles <- lapply(lapply(dems, read.csv), tibble)
+if (!exists("dem_tibbles") | length(dem_tibbles) != length(dems)) {
+  dem_tibbles <- lapply(lapply(dems, read.csv), tibble)
+}
 
-s <- srcurve2(land_pred, 
-         dem_list  = dem_tibbles)
+s <- success_rate_curve(land_pred, 
+                        dem_list = dem_tibbles, 
+                        quiet = TRUE)
 
 ```
+```{r}
+s
+```
+
+This function automatically plots the success rate curve with gray lines which represent each individual DEM (it can be turned off by changing the `plot` argument to false). It also returns a data frame with the proportions of observed and modeled landslides at each probability, along with the proportion of total area at each probability. 
+With this information, we can plot the observed landslide curve against the modeled landslide success rate curve. 
+
+```{r}
+ggplot(data = s) + 
+  geom_line(aes(x = area_prop, y = observed_prop), color = "red") + 
+  geom_line(aes(x = area_prop, y = modeled_prop))
+```
+
 
 
 
